Allow URL-validator to pass a placeholder url for vectortiles